--- a/hairista/Controller/Login/LoginViewController.xib
+++ b/hairista/Controller/Login/LoginViewController.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -172,7 +171,7 @@
                                 <action selector="regis:" destination="-1" eventType="touchUpInside" id="fk3-FX-Ea0"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oU4-lC-hfx">
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oU4-lC-hfx">
                             <rect key="frame" x="61" y="192.5" width="127" height="24"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="24" id="Y1Q-0G-jLM"/>
