--- a/hairista/Controller/DetailSalon/SalonDetail/HeaderSalonView/HeaderSalonView.xib
+++ b/hairista/Controller/DetailSalon/SalonDetail/HeaderSalonView/HeaderSalonView.xib
@@ -69,7 +69,7 @@
                             <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="14"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Akj-gn-8FG">
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Akj-gn-8FG">
                             <rect key="frame" x="338" y="13" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="Vwr-NH-8cD"/>
