--- a/hairista/Controller/Favorite/FavoriteViewController.xib
+++ b/hairista/Controller/Favorite/FavoriteViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -16,6 +16,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FavoriteViewController">
             <connections>
+                <outlet property="tblView" destination="WeM-Ve-Vmi" id="Pgs-vj-UfY"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -90,13 +91,26 @@
                         <constraint firstAttribute="trailing" secondItem="q4R-PT-egq" secondAttribute="trailing" id="qCS-Tt-OiF"/>
                     </constraints>
                 </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WeM-Ve-Vmi">
+                    <rect key="frame" x="0.0" y="72" width="375" height="595"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="vSD-Ov-CIE"/>
+                        <outlet property="delegate" destination="-1" id="Z8d-Mi-Eua"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="upb-l7-FaV" secondAttribute="trailing" id="0NQ-gO-zwf"/>
                 <constraint firstItem="upb-l7-FaV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1Xx-bL-EJb"/>
+                <constraint firstItem="WeM-Ve-Vmi" firstAttribute="top" secondItem="upb-l7-FaV" secondAttribute="bottom" id="2ko-5C-BGq"/>
                 <constraint firstItem="upb-l7-FaV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="WlQ-x6-bs0"/>
+                <constraint firstAttribute="trailing" secondItem="WeM-Ve-Vmi" secondAttribute="trailing" id="gQx-KQ-esk"/>
+                <constraint firstAttribute="bottom" secondItem="WeM-Ve-Vmi" secondAttribute="bottom" id="jvo-hf-9fQ"/>
+                <constraint firstItem="WeM-Ve-Vmi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="zsM-Nx-4QZ"/>
             </constraints>
+            <point key="canvasLocation" x="60.5" y="59.5"/>
         </view>
     </objects>
     <resources>
