--- a/hairista/Controller/Manager/Booking/ManageListBooking/ManageBookingCell/ManageBookingCell.xib
+++ b/hairista/Controller/Manager/Booking/ManageListBooking/ManageBookingCell/ManageBookingCell.xib
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="Roboto-Light.ttf">
             <string>Roboto-Light</string>
+        </array>
+        <array key="Roboto-Medium.ttf">
+            <string>Roboto-Medium</string>
         </array>
         <array key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
@@ -20,18 +22,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ManageBookingCell" rowHeight="79" id="KGk-i7-Jjw" customClass="ManageBookingCell">
-            <rect key="frame" x="0.0" y="0.0" width="379" height="79"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ManageBookingCell" rowHeight="119" id="KGk-i7-Jjw" customClass="ManageBookingCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="379" height="78"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="118.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="k1Z-SC-YYK">
-                        <rect key="frame" x="11" y="12" width="54" height="54"/>
+                        <rect key="frame" x="8" y="48" width="54" height="54"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="54" id="gcu-Rc-eCB"/>
-                            <constraint firstAttribute="height" constant="54" id="icc-7b-xpH"/>
+                            <constraint firstAttribute="height" constant="54" id="RNE-6x-Fqq"/>
+                            <constraint firstAttribute="width" constant="54" id="Vgh-d0-R7S"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -39,69 +41,69 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hồ Ngọc Hà" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npw-1H-Bza">
-                        <rect key="frame" x="73" y="15" width="194" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Võ Nguyên Đông" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npw-1H-Bza">
+                        <rect key="frame" x="73" y="48" width="239" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="yS4-KA-BcA"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="0nA-0F-Gvj"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5z-IV-gjj">
+                        <rect key="frame" x="73" y="76" width="239" height="26"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="26" id="kxa-La-u83"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Thứ 2, 11/05/2017 9:30" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F57-6g-4B4">
+                        <rect key="frame" x="8" y="8" width="210" height="26"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="26" id="XIv-9H-5Np"/>
+                            <constraint firstAttribute="width" constant="210" id="eSn-55-iaF"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                        <color key="textColor" red="0.60000002384185791" green="0.40000000596046448" blue="0.20000000298023224" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0932188608" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTZ-kK-h5L">
-                        <rect key="frame" x="275" y="15" width="96" height="21"/>
+                        <rect key="frame" x="221" y="10" width="91" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="96" id="Z9U-DR-hkm"/>
-                            <constraint firstAttribute="height" constant="21" id="rMn-yT-o9r"/>
+                            <constraint firstAttribute="height" constant="21" id="3hr-rO-gNW"/>
+                            <constraint firstAttribute="width" constant="91" id="tmr-ra-ZB6"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cắt tóc gội đầu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5z-IV-gjj">
-                        <rect key="frame" x="73" y="43" width="219" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="7AD-dU-2hc"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9:30 AM" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CuH-qB-wOR">
-                        <rect key="frame" x="300" y="43" width="71" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="71" id="bve-rx-1pQ"/>
-                            <constraint firstAttribute="height" constant="21" id="jo3-K4-hcQ"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="16"/>
+                        <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="sTZ-kK-h5L" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="1w9-F5-3LT"/>
-                    <constraint firstItem="sTZ-kK-h5L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="2xW-9w-Apn"/>
-                    <constraint firstItem="k1Z-SC-YYK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="3" id="4Vc-9t-M0y"/>
-                    <constraint firstItem="sTZ-kK-h5L" firstAttribute="leading" secondItem="npw-1H-Bza" secondAttribute="trailing" constant="8" id="ECx-zU-p1C"/>
-                    <constraint firstItem="npw-1H-Bza" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="HCW-Zs-6ti"/>
-                    <constraint firstItem="v5z-IV-gjj" firstAttribute="top" secondItem="sTZ-kK-h5L" secondAttribute="bottom" constant="7" id="O9a-8j-dOg"/>
-                    <constraint firstItem="v5z-IV-gjj" firstAttribute="leading" secondItem="k1Z-SC-YYK" secondAttribute="trailing" constant="8" id="RYR-D8-IqF"/>
-                    <constraint firstItem="CuH-qB-wOR" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="VRd-uJ-a4a"/>
-                    <constraint firstItem="CuH-qB-wOR" firstAttribute="leading" secondItem="v5z-IV-gjj" secondAttribute="trailing" constant="8" id="YAG-P4-mOc"/>
-                    <constraint firstItem="k1Z-SC-YYK" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cxW-eM-8Dq"/>
-                    <constraint firstItem="CuH-qB-wOR" firstAttribute="top" secondItem="sTZ-kK-h5L" secondAttribute="bottom" constant="7" id="k5a-jM-7WC"/>
-                    <constraint firstItem="npw-1H-Bza" firstAttribute="leading" secondItem="k1Z-SC-YYK" secondAttribute="trailing" constant="8" id="pBs-5v-7X1"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="v5z-IV-gjj" secondAttribute="bottom" priority="750" constant="6" id="rWK-KK-Zay"/>
+                    <constraint firstItem="npw-1H-Bza" firstAttribute="leading" secondItem="k1Z-SC-YYK" secondAttribute="trailing" constant="11" id="3fT-rZ-EAr"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="v5z-IV-gjj" secondAttribute="bottom" priority="750" constant="8.5" id="4Qq-DE-m6T"/>
+                    <constraint firstItem="v5z-IV-gjj" firstAttribute="leading" secondItem="k1Z-SC-YYK" secondAttribute="trailing" constant="11" id="6oW-hB-R3G"/>
+                    <constraint firstItem="F57-6g-4B4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="9T4-7C-CQb"/>
+                    <constraint firstItem="sTZ-kK-h5L" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="GcR-gW-jQ4"/>
+                    <constraint firstItem="k1Z-SC-YYK" firstAttribute="top" secondItem="F57-6g-4B4" secondAttribute="bottom" constant="14" id="Ler-Xw-15L"/>
+                    <constraint firstItem="v5z-IV-gjj" firstAttribute="top" secondItem="npw-1H-Bza" secondAttribute="bottom" constant="7" id="NQS-X6-QaD"/>
+                    <constraint firstItem="sTZ-kK-h5L" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="RRP-rS-y49"/>
+                    <constraint firstItem="npw-1H-Bza" firstAttribute="top" secondItem="F57-6g-4B4" secondAttribute="bottom" constant="14" id="VAX-Af-al1"/>
+                    <constraint firstItem="k1Z-SC-YYK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="pT8-VH-KoL"/>
+                    <constraint firstItem="npw-1H-Bza" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="uEa-YY-3FZ"/>
+                    <constraint firstItem="F57-6g-4B4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="wcf-zl-5bL"/>
+                    <constraint firstItem="v5z-IV-gjj" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="zDR-N7-PPr"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="imgViewAvatar" destination="k1Z-SC-YYK" id="loc-c1-45x"/>
-                <outlet property="lblServiceName" destination="v5z-IV-gjj" id="tVH-nH-rxl"/>
-                <outlet property="lblTimeBooking" destination="CuH-qB-wOR" id="ygF-sF-4lu"/>
+                <outlet property="lblTimeBooking" destination="F57-6g-4B4" id="qfe-6N-XCC"/>
+                <outlet property="lblTotalPrice" destination="v5z-IV-gjj" id="bjB-FB-csy"/>
                 <outlet property="lblUserName" destination="npw-1H-Bza" id="9iX-3x-JqF"/>
                 <outlet property="lblUserPhone" destination="sTZ-kK-h5L" id="Q3E-TY-Sed"/>
             </connections>
-            <point key="canvasLocation" x="-19.5" y="-146.5"/>
+            <point key="canvasLocation" x="-20" y="-131.5"/>
         </tableViewCell>
     </objects>
     <resources>
