--- a/hairista/Controller/DetailSalon/SalonDetail/ChooseImageView/ChooseImageView.xib
+++ b/hairista/Controller/DetailSalon/SalonDetail/ChooseImageView/ChooseImageView.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,58 +25,71 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0nP-5T-gYu">
-                    <rect key="frame" x="0.0" y="20" width="375" height="590"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UEa-Ki-OU8">
-                    <rect key="frame" x="260" y="625" width="101" height="30"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rN8-kA-XpL">
+                    <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e7k-hm-yss">
+                            <rect key="frame" x="259" y="10" width="101" height="30"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="101" id="Slc-zv-eWY"/>
+                                <constraint firstAttribute="height" constant="30" id="ePA-lA-liu"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="11"/>
+                            <state key="normal" title="Chia sẻ lên Salon">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="touchBtnShare:" destination="-1" eventType="touchUpInside" id="1Mr-Qo-kF1"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aiU-JQ-PYJ">
+                            <rect key="frame" x="14" y="10" width="101" height="30"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="101" id="1Fp-9S-5x9"/>
+                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="AsK-Nx-8CM"/>
+                                <constraint firstAttribute="height" constant="30" id="mjj-cj-Hzi"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="11"/>
+                            <state key="normal" title="Trở về">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="touchBtnBack:" destination="-1" eventType="touchUpInside" id="BvY-Qz-nSY"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.30075374119718312" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="Fwi-Bb-Xzm"/>
-                        <constraint firstAttribute="width" constant="101" id="GdL-uK-l8A"/>
+                        <constraint firstAttribute="height" constant="50" id="0ma-fC-5Ns"/>
+                        <constraint firstAttribute="trailing" secondItem="e7k-hm-yss" secondAttribute="trailing" constant="15" id="Lnf-Q4-uq8"/>
+                        <constraint firstItem="aiU-JQ-PYJ" firstAttribute="leading" secondItem="rN8-kA-XpL" secondAttribute="leading" constant="14" id="UA4-mQ-y9n"/>
+                        <constraint firstItem="e7k-hm-yss" firstAttribute="centerY" secondItem="rN8-kA-XpL" secondAttribute="centerY" id="ZMD-0P-uXN"/>
+                        <constraint firstItem="aiU-JQ-PYJ" firstAttribute="centerY" secondItem="rN8-kA-XpL" secondAttribute="centerY" id="fsf-nO-ptL"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="11"/>
-                    <state key="normal" title="Chia sẻ lên Salon">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="touchBtnShare:" destination="-1" eventType="touchUpInside" id="ewP-C3-boS"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wNd-Un-VB8">
-                    <rect key="frame" x="15" y="625" width="101" height="30"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="51f-qI-B7F"/>
-                        <constraint firstAttribute="width" constant="101" id="alg-Yu-sJa"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="11"/>
-                    <state key="normal" title="Trở về">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <action selector="touchBtnBack:" destination="-1" eventType="touchUpInside" id="1QC-dC-p5p"/>
-                    </connections>
-                </button>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="wNd-Un-VB8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="2p7-Q7-vAF"/>
                 <constraint firstItem="0nP-5T-gYu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="IQd-gt-5Vl"/>
-                <constraint firstAttribute="bottom" secondItem="0nP-5T-gYu" secondAttribute="bottom" constant="57" id="KjP-ne-M5b"/>
-                <constraint firstAttribute="trailing" secondItem="UEa-Ki-OU8" secondAttribute="trailing" constant="14" id="T6v-ah-nWw"/>
+                <constraint firstAttribute="bottom" secondItem="0nP-5T-gYu" secondAttribute="bottom" id="KjP-ne-M5b"/>
+                <constraint firstAttribute="trailing" secondItem="rN8-kA-XpL" secondAttribute="trailing" id="Pax-Qt-mJv"/>
                 <constraint firstAttribute="trailing" secondItem="0nP-5T-gYu" secondAttribute="trailing" id="bCw-T6-18J"/>
-                <constraint firstAttribute="bottom" secondItem="wNd-Un-VB8" secondAttribute="bottom" constant="12" id="fbH-1u-1Hh"/>
-                <constraint firstAttribute="bottom" secondItem="UEa-Ki-OU8" secondAttribute="bottom" constant="12" id="ka3-5a-sKT"/>
+                <constraint firstAttribute="bottom" secondItem="rN8-kA-XpL" secondAttribute="bottom" id="cV3-43-m8G"/>
+                <constraint firstItem="rN8-kA-XpL" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="lir-j4-0fk"/>
                 <constraint firstItem="0nP-5T-gYu" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="wJs-7w-cJy"/>
             </constraints>
             <point key="canvasLocation" x="26.5" y="52.5"/>
